# TranscribePro

./: .gitignore  README.md  gradle.properties  local.properties  settings.gradle.kts
.cursor/rules/: kotlin.mdc
app/: build.gradle.kts
app/src/androidTest/java/com/example/transcribepro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/transcribepro/: MainActivity.kt
app/src/main/java/com/example/transcribepro/media/: AudioFileManager.kt  RiffWaveHelper.kt
app/src/main/java/com/example/transcribepro/recorder/: Recorder.kt
app/src/main/java/com/example/transcribepro/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: background.xml  button.xml  checkbox_background.xml  checkbox_checked_background.xml  radio_button_selector.xml
app/src/main/res/layout/: activity_main.xml  list_item_language_radio.xml  spinner_list.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/transcribepro/: ExampleUnitTest.kt
docs/: TechnicalOverview.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts  proguard-rules.pro
lib/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperLib.kt
lib/src/main/jni/whisper/: CMakeLists.txt  jni.c
